--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,10 @@
 body {
     background: azure;
 }
+
+.MuiAccordionSummary-gutters {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
